tests/invalid/uniq_neg.err_exp
uniq_neg.m:025: In clause for `unify(in, in, in, in, di, uo)':
uniq_neg.m:025:   in argument 3 of call to predicate `uniq_neg.occurs'/4:
uniq_neg.m:025:   mode error: variable `DCG_0' has instantiatedness
uniq_neg.m:025:   `mostly_unique',
uniq_neg.m:025:   expected instantiatedness was `unique'.
